--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/2-snackbar.css" />
     <title>Snackbar Page</title>
   </head>
   <body>
@@ -12,6 +12,39 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to Snackbar Page</h1>
     </section>
+
+    <form class="form">
+      <label class="delay-section">
+        Delay (ms)
+        <input class="delay" type="number" name="delay" required />
+      </label>
+
+      <fieldset>
+        <legend>State</legend>
+        <label>
+          <input
+            class="input-state"
+            type="radio"
+            name="state"
+            value="fulfilled"
+            required
+          />
+          Fulfilled
+        </label>
+        <label>
+          <input
+            class="input-state"
+            type="radio"
+            name="state"
+            value="rejected"
+            required
+          />
+          Rejected
+        </label>
+      </fieldset>
+
+      <button type="submit">Create notification</button>
+    </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
